--- a/app/src/app/modules/songs/songs.page.html
+++ b/app/src/app/modules/songs/songs.page.html
@@ -17,9 +17,9 @@
         </ion-button>
       </ion-col>
     </ion-row>
-    <!-- <div class="d-flex ion-align-items-center">
-      <span>{{ this.sortAsc == 0 ? 'Más recientes' : this.sortAsc == 2 ? 'Menos recientes' : this.sortAsc == 1 ? 'A-Z' : 'Z-A'}}</span>
-    </div> -->
+    <div class="d-flex ion-align-items-center">
+      <ion-text color="light" class="ml0Auto">{{ this.sortAsc == 0 ? 'Más recientes' : this.sortAsc == 2 ? 'Menos recientes' : this.sortAsc == 1 ? 'A-Z' : 'Z-A'}}</ion-text>
+    </div>
   </div>
 
   <ion-list>
